--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "dayjs": "^1.11.10",
         "sweetalert2": "^11.10.6"
     }
 }
